nginx-ingress/nginx-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: ingress-basic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    # prod
    - hosts:
        - baobab.blog
      secretName: tls-prod
    - hosts:
        - api.baobab.blog
      secretName: tls-prod-api
  rules:
    # prod
    - host: baobab.blog
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-server-prod-external
              port:
                number: 2999
    - host: api.baobab.blog
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blog-service-prod-external
              port:
                number: 3000
