nginx-ingress/nginx-ingress-qa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: ingress-basic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    # qa
    - hosts:
        - qa.baobab.blog
      secretName: tls-qa
    - hosts:
        - api.qa.baobab.blog
      secretName: tls-api-qa
  rules:
    # qa
    - host: qa.baobab.blog
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-server-qa-external
              port:
                number: 2999
    - host: api.qa.baobab.blog
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blog-service-qa-external
              port:
                number: 3000
